// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test GridFile should behave correctly 1`] = `
<div>
  <div
    class="grid"
  >
    <div
      class="img-container"
    >
      <div
        class="guide-lines"
        style="background: url(core-img/flux-plus/guide-lines.png);"
      >
        <img
          src="https://s3/url?lastmod=2024-01-09T06:42:04.824942Z"
        />
        <div
          class="ant-dropdown-trigger overlay trigger"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </div>
        <span />
      </div>
    </div>
    <div
      class="name"
    >
      <div
        class="display"
      >
        File name
      </div>
    </div>
    <div
      class="info"
    >
      HEXA
       • 
      01/09/2024 02:42 PM
    </div>
  </div>
</div>
`;

exports[`test GridFile should behave correctly 2`] = `
<div>
  <div
    class="grid"
  >
    <div
      class="img-container"
    >
      <div
        class="guide-lines"
        style="background: url(core-img/flux-plus/guide-lines.png);"
      >
        <img
          src="https://s3/url?lastmod=2024-01-09T06:42:04.824942Z"
        />
        <div
          class="ant-dropdown-trigger overlay trigger ant-dropdown-open"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </div>
        <span />
        <div
          class="ant-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up overlay css-dev-only-do-not-override-hash ant-dropdown-placement-bottomRight"
          style="left: -1000vw; top: -1000vh; box-sizing: border-box;"
        >
          <ul
            class="ant-dropdown-menu ant-dropdown-menu-root ant-dropdown-menu-vertical ant-dropdown-menu-light css-dev-only-do-not-override-hash"
            data-menu-list="true"
            role="menu"
            tabindex="0"
          >
            <li
              class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
              data-menu-id="rc-menu-uuid-test-open"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="ant-dropdown-menu-title-content"
              >
                Open
              </span>
            </li>
            <li
              class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
              data-menu-id="rc-menu-uuid-test-rename"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="ant-dropdown-menu-title-content"
              >
                Rename
              </span>
            </li>
            <li
              class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
              data-menu-id="rc-menu-uuid-test-duplicate"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="ant-dropdown-menu-title-content"
              >
                Duplicate
              </span>
            </li>
            <li
              class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
              data-menu-id="rc-menu-uuid-test-download"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="ant-dropdown-menu-title-content"
              >
                Download
              </span>
            </li>
            <li
              class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
              data-menu-id="rc-menu-uuid-test-delete"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="ant-dropdown-menu-title-content"
              >
                Delete
              </span>
            </li>
          </ul>
          <div
            aria-hidden="true"
            style="display: none;"
          />
        </div>
      </div>
    </div>
    <div
      class="name"
    >
      <div
        class="display"
      >
        File name
      </div>
    </div>
    <div
      class="info"
    >
      HEXA
       • 
      01/09/2024 02:42 PM
    </div>
  </div>
</div>
`;

exports[`test GridFile should behave correctly 3`] = `
<div>
  <div
    class="grid"
  >
    <div
      class="img-container"
    >
      <div
        class="guide-lines"
        style="background: url(core-img/flux-plus/guide-lines.png);"
      >
        <img
          src="https://s3/url?lastmod=2024-01-09T06:42:04.824942Z"
        />
        <div
          class="ant-dropdown-trigger overlay trigger"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </div>
        <span />
        <div
          class="ant-dropdown ant-dropdown-hidden overlay css-dev-only-do-not-override-hash ant-dropdown-placement-bottomRight"
          style="left: 0px; top: 0px; box-sizing: border-box; pointer-events: none;"
        >
          <ul
            class="ant-dropdown-menu ant-dropdown-menu-root ant-dropdown-menu-vertical ant-dropdown-menu-light css-dev-only-do-not-override-hash"
            data-menu-list="true"
            role="menu"
            tabindex="0"
          >
            <li
              class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
              data-menu-id="rc-menu-uuid-test-open"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="ant-dropdown-menu-title-content"
              >
                Open
              </span>
            </li>
            <li
              class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
              data-menu-id="rc-menu-uuid-test-rename"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="ant-dropdown-menu-title-content"
              >
                Rename
              </span>
            </li>
            <li
              class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
              data-menu-id="rc-menu-uuid-test-duplicate"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="ant-dropdown-menu-title-content"
              >
                Duplicate
              </span>
            </li>
            <li
              class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
              data-menu-id="rc-menu-uuid-test-download"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="ant-dropdown-menu-title-content"
              >
                Download
              </span>
            </li>
            <li
              class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
              data-menu-id="rc-menu-uuid-test-delete"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="ant-dropdown-menu-title-content"
              >
                Delete
              </span>
            </li>
          </ul>
          <div
            aria-hidden="true"
            style="display: none;"
          />
        </div>
      </div>
    </div>
    <div
      class="name"
    >
      <input
        class="ant-input ant-input-sm css-dev-only-do-not-override-hash edit"
        type="text"
        value="File name"
      />
    </div>
    <div
      class="info"
    >
      HEXA
       • 
      01/09/2024 02:42 PM
    </div>
  </div>
</div>
`;

exports[`test GridFile should behave correctly 4`] = `
<div>
  <div
    class="grid"
  >
    <div
      class="img-container"
    >
      <div
        class="guide-lines"
        style="background: url(core-img/flux-plus/guide-lines.png);"
      >
        <img
          src="https://s3/url?lastmod=2024-01-09T06:42:04.824942Z"
        />
        <div
          class="ant-dropdown-trigger overlay trigger"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </div>
        <span
          class="ant-popover-open"
        />
        <div
          class="ant-dropdown ant-dropdown-hidden overlay css-dev-only-do-not-override-hash ant-dropdown-placement-bottomRight"
          style="left: 0px; top: 0px; box-sizing: border-box; pointer-events: none;"
        >
          <ul
            class="ant-dropdown-menu ant-dropdown-menu-root ant-dropdown-menu-vertical ant-dropdown-menu-light css-dev-only-do-not-override-hash"
            data-menu-list="true"
            role="menu"
            tabindex="0"
          >
            <li
              class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
              data-menu-id="rc-menu-uuid-test-open"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="ant-dropdown-menu-title-content"
              >
                Open
              </span>
            </li>
            <li
              class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
              data-menu-id="rc-menu-uuid-test-rename"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="ant-dropdown-menu-title-content"
              >
                Rename
              </span>
            </li>
            <li
              class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
              data-menu-id="rc-menu-uuid-test-duplicate"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="ant-dropdown-menu-title-content"
              >
                Duplicate
              </span>
            </li>
            <li
              class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
              data-menu-id="rc-menu-uuid-test-download"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="ant-dropdown-menu-title-content"
              >
                Download
              </span>
            </li>
            <li
              class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
              data-menu-id="rc-menu-uuid-test-delete"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="ant-dropdown-menu-title-content"
              >
                Delete
              </span>
            </li>
          </ul>
          <div
            aria-hidden="true"
            style="display: none;"
          />
        </div>
        <div
          class="ant-popover ant-zoom-big-appear ant-zoom-big-appear-prepare ant-zoom-big ant-popconfirm overlay css-dev-only-do-not-override-hash css-dev-only-do-not-override-hash ant-popover-placement-top"
          style="left: -1000vw; top: -1000vh; box-sizing: border-box;"
        >
          <div
            class="ant-popover-content"
          >
            <div
              class="ant-popover-inner"
              role="tooltip"
            >
              <div
                class="ant-popover-inner-content"
              >
                <div
                  class="ant-popconfirm-inner-content"
                >
                  <div
                    class="ant-popconfirm-message"
                  >
                    <span
                      class="ant-popconfirm-message-icon"
                    >
                      <span
                        aria-label="exclamation-circle"
                        class="anticon anticon-exclamation-circle"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="exclamation-circle"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                          />
                        </svg>
                      </span>
                    </span>
                    <div
                      class="ant-popconfirm-message-text"
                    >
                      <div
                        class="ant-popconfirm-title"
                      >
                        Are you sure you want to delete this file?
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-popconfirm-buttons"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-sm"
                      type="button"
                    >
                      <span>
                        Cancel
                      </span>
                    </button>
                    <button
                      class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-sm"
                      type="button"
                    >
                      <span>
                        OK
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="name"
    >
      <div
        class="display"
      >
        File name
      </div>
    </div>
    <div
      class="info"
    >
      HEXA
       • 
      01/09/2024 02:42 PM
    </div>
  </div>
</div>
`;

exports[`test GridFile should rendered correctly in mobile 1`] = `
<div>
  <div
    class="grid"
  >
    <div
      class="img-container"
    >
      <div
        class="guide-lines"
        style="background: url(core-img/flux-plus/guide-lines.png);"
      >
        <img
          src="https://s3/url?lastmod=2024-01-09T06:42:04.824942Z"
        />
        <div
          class="ant-dropdown-trigger overlay trigger"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </div>
        <span />
      </div>
    </div>
    <div
      class="name"
    >
      <div
        class="display"
      >
        File name
      </div>
    </div>
    <div
      class="info"
    >
      HEXA
      <br />
      01/09/2024 02:42 PM
    </div>
  </div>
</div>
`;
